会员管理代码

--- a/member-del.html
+++ b/member-del.html
@@ -82,9 +82,7 @@
                               <td>北京市 海淀区</td>
                               <td>2017-01-01 11:11:42</td>
                               <td class="td-status">
-                                <span class="layui-btn layui-btn-danger layui-btn-mini">
-                                                  已删除
-                                              </span>
+                                <span class="layui-btn layui-btn-danger layui-btn-mini" onclick="">已删除</span>
                               <td class="td-manage">
                                 <a title="恢复" onclick="member_del(this,'要删除的id')" href="javascript:;">
                                   <i class="layui-icon">&#xe669;</i>
