--- a/index.html
+++ b/index.html
@@ -75,10 +75,15 @@
                             <cite>会员管理</cite>
                             <i class="iconfont nav_right">&#xe697;</i></a>
                         <ul class="sub-menu">
-                            <li>
-                                <a onclick="xadmin.add_tab('统计页面','welcome1.html')">
+                        	<li>
+                                <a onclick="xadmin.add_tab('会员卡库存录入','member_card.html')">
                                     <i class="iconfont">&#xe6a7;</i>
-                                    <cite>统计页面</cite></a>
+                                    <cite>会员卡库存录入</cite></a>
+                            </li>
+                            <li>
+                                <a onclick="xadmin.add_tab('会员卡管理','welcome1.html')">
+                                    <i class="iconfont">&#xe6a7;</i>
+                                    <cite>会员卡管理</cite></a>
                             </li>
                             <li>
                                 <a onclick="xadmin.add_tab('会员列表(静态表格)','member-list.html')">
@@ -135,8 +140,8 @@
                     </li>
                     <li>
                         <a href="javascript:;">
-                            <i class="iconfont left-nav-li" lay-tips="分类管理">&#xe723;</i>
-                            <cite>分类管理</cite>
+                            <i class="iconfont left-nav-li" lay-tips="商品管理">&#xe722;</i>
+                            <cite>商品管理</cite>
                             <i class="iconfont nav_right">&#xe697;</i></a>
                         <ul class="sub-menu">
                             <li>
