--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <!-- 顶部开始 -->
         <div class="container">
             <div class="logo">
-                <a href="./index.html">森鲜便利店</a></div>
+                <a href="javascript:;">森鲜便利店</a></div>
             <div class="left_open">
                 <a><i title="展开左侧栏" class="iconfont">&#xe699;</i></a>
             </div>
@@ -81,9 +81,9 @@
                                     <cite>会员卡库存录入</cite></a>
                             </li>
                             <li>
-                                <a onclick="xadmin.add_tab('会员卡管理','welcome1.html')">
+                                <a onclick="xadmin.add_tab('开通会员卡','membership_list.html')">
                                     <i class="iconfont">&#xe6a7;</i>
-                                    <cite>会员卡管理</cite></a>
+                                    <cite>开通会员卡</cite></a>
                             </li>
                             <li>
                                 <a onclick="xadmin.add_tab('会员列表(静态表格)','member-list.html')">
@@ -95,11 +95,7 @@
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>会员列表(动态表格)</cite></a>
                             </li>
-                            <li>
-                                <a onclick="xadmin.add_tab('会员删除','member-del.html')">
-                                    <i class="iconfont">&#xe6a7;</i>
-                                    <cite>会员删除</cite></a>
-                            </li>
+                            
                             <li>
                                 <a href="javascript:;">
                                     <i class="iconfont">&#xe70b;</i>
