--- a/goods/goodsCategory.html
+++ b/goods/goodsCategory.html
@@ -6,13 +6,13 @@
         <title>欢迎页面-X-admin2.2</title>
         <meta name="renderer" content="webkit">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
         <link rel="stylesheet" href="../css/font.css">
         <link rel="stylesheet" href="../css/xadmin.css">
         <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
         <script src="../lib/layui/layui.js" charset="utf-8"></script>
         <script type="text/javascript" src="../js/xadmin.js"></script>
-        <script type="text/javascript" src="./goods.js"></script>
+        <script type="text/javascript" src="../js/jquery.min.js" ></script>
+        <script type="text/javascript" src="./goodsCategory.js"></script>
         <!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
         <!--[if lt IE 9]>
           <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
@@ -39,31 +39,31 @@
                         <div class="layui-card-body ">
                             <form class="layui-form layui-col-space5">
                                 <div class="layui-input-inline layui-show-xs-block">
-                                    <input class="layui-input" placeholder="商品名称" name="goodsName"></div>
+                                    <input class="layui-input" placeholder="分类名称" id="categoryName" name="categoryName"></div>
                                 <div class="layui-input-inline layui-show-xs-block">
-                                  <select id="goodsStatus" name="goodsStatus" class="valid" lay-filter="goodsStatus" lay-verify="required">
-                                      <option value="0">下架</option>
-                                      <option value="1">上架</option>
-                                      <option value="2">售罄</option>
-                                  </select>
-                                </div>
-                                <div class="layui-input-inline layui-show-xs-block">
-                                    <button class="layui-btn" id="sreach"  lay-submit="" lay-filter="sreach">查询</button>
+                                    <button class="layui-btn" id="search"  lay-submit="" lay-filter="search">查询</button>
                                 </div>
                             </form>
                             <hr>
                         </div>
                         <div class="layui-card-header">
-                            <button class="layui-btn" onclick="xadmin.open('添加商品','./goodsAdd.html',600,400)">
+                            <button class="layui-btn" onclick="xadmin.open('添加分类','./goodsCategoryAdd.html',600,400)">
                                 <i class="layui-icon"></i>新增</button>
-                            <button class="layui-btn layui-btn-warm" onclick="delAll()">
-                              <i class="layui-icon"></i>修改</button>
                             <button class="layui-btn layui-btn-danger" onclick="delAll()">
                               <i class="layui-icon"></i>批量删除</button>
                         </div>
                         <div class="layui-card-body layui-table-body layui-table-main">
-                          <table class="layui-table layui-form" id="test" lay-filter="test">
+                          <table class="layui-table layui-form" id="table" lay-filter="table">
                           </table>
                       </div>
     </body>
+    <script type="text/html" id="barDemo">
+        <a title="编辑"  onclick="editOpen(this)" href="javascript:;">
+            <i class="layui-icon">&#xe642;</i>
+          </a>
+          
+          <a title="删除" onclick="delCate(this)" href="javascript:;">
+            <i class="layui-icon">&#xe640;</i>
+          </a>
+      </script>
 </html>
