--- a/index.html
+++ b/index.html
@@ -141,6 +141,11 @@
                             <i class="iconfont nav_right">&#xe697;</i></a>
                         <ul class="sub-menu">
                             <li>
+                                <a onclick="xadmin.add_tab('分类列表','./goods/goodsCategory.html')">
+                                    <i class="iconfont">&#xe6a7;</i>
+                                    <cite>分类列表</cite></a>
+                            </li>
+                            <li>
                                 <a onclick="xadmin.add_tab('商品列表','./goods/goods.html')">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>商品列表</cite></a>
