--- a/goods/goodsCategory.html
+++ b/goods/goodsCategory.html
@@ -58,7 +58,7 @@
                       </div>
     </body>
     <script type="text/html" id="barDemo">
-        <a title="编辑"  onclick="editOpen(this)" href="javascript:;">
+        <a title="编辑"  onclick="editOpen(this)" href="javascript:;" lay-event="edit">
             <i class="layui-icon">&#xe642;</i>
           </a>
           
