--- a/dict-list.html
+++ b/dict-list.html
@@ -55,7 +55,7 @@
                             <button class="layui-btn layui-btn-danger" onclick="delAll()">
                                 <i class="layui-icon"></i>批量删除</button>
                             <button class="layui-btn" onclick="xadmin.open('添加字典信息','./dict_add.html',550,350)">
-                                <i class="layui-icon"></i>添加</button></div>
+                                <i class="layui-icon"></i>添加字典信息</button></div>
                         <div class="layui-card-body ">
                             <table class="layui-table layui-form">
                                 <thead>
