--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <!-- 顶部开始 -->
         <div class="container">
             <div class="logo">
-                <a href="javascript:;">森鲜便利店</a></div>
+                <a href="javascript:;">生鲜便利超市</a></div>
             <div class="left_open">
                 <a><i title="展开左侧栏" class="iconfont">&#xe699;</i></a>
             </div>
@@ -67,6 +67,12 @@
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>数据字典列表</cite></a>
                             </li>
+                            <li>
+                                <a onclick="xadmin.add_tab('配置信息列表','./system/config_list.html')">
+                                    <i class="iconfont">&#xe6a7;</i>
+                                    <cite>配置信息列表</cite></a>
+                            </li>
+                           
                         </ul>
                     </li>
                     <li>
