--- a/member_card_add.html
+++ b/member_card_add.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html class="x-admin-sm">
-    
     <head>
         <meta charset="UTF-8">
         <title>欢迎页面-X-admin2.2</title>
@@ -47,8 +46,9 @@
                         </div>
                     </div>
                     <div class="layui-form-item">
-                        <label for="L_repass" class="layui-form-label"></label>
-                        <button class="layui-btn" lay-filter="add" lay-submit="">增加</button></div>
+			            <label for="L_repass" class="layui-form-label"></label>
+			            <button class="layui-btn" lay-filter="add" lay-submit="">增加</button>
+			        </div>
                 </form>
             </div>
         </div>
