--- a/membership_add.html
+++ b/membership_add.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="./css/font.css">
         <link rel="stylesheet" href="./css/xadmin.css">
         <script type="text/javascript" src="./lib/layui/layui.js" charset="utf-8"></script>
-        <script type="text/javascript" src="./js/xadmin.js"></script>
+        <script type="text/javascript" src="js/xadmin.js"></script>
         <script type="text/javascript" src="js/jquery.min.js" ></script>
         <script type="text/javascript" src="js/member/membership_add.js" ></script>
         <!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
@@ -52,8 +52,9 @@
                         </div>
                     </div>
                     <div class="layui-form-item">
-                        <label for="L_repass" class="layui-form-label"></label>
-                        <button class="layui-btn" lay-filter="add" lay-submit="">增加</button></div>
+			            <label for="L_repass" class="layui-form-label"></label>
+			            <button class="layui-btn" lay-filter="add" lay-submit="">增加</button>
+			        </div>
                 </form>
             </div>
         </div>
