--- a/member_card.html
+++ b/member_card.html
@@ -36,10 +36,7 @@
                             <form class="layui-form layui-col-space5">
                                 <div class="layui-inline layui-show-xs-block">
                                     <select id="memberType" name="memberType" class="valid" lay-filter="memberType" lay-verify="required">
-                                    	<option value=""></option>
-                                        <!--<option>消费卡</option>
-                                        <option>会员卡</option>
-                                        <option>押金卡</option>-->
+                                    	<option value="">请选择会员类型</option>
                                     </select>
                                 </div>
                                 <div class="layui-inline layui-show-xs-block">
