--- a/goods/goods.html
+++ b/goods/goods.html
@@ -38,7 +38,7 @@
                         <div class="layui-card-body ">
                             <form class="layui-form layui-col-space5">
                                 <div class="layui-input-inline layui-show-xs-block">
-                                    <input class="layui-input" placeholder="商品名称" name="goodsName"></div>
+                                    <input class="layui-input" placeholder="商品名称" id="goodsName" name="goodsName"></div>
                                 <div class="layui-input-inline layui-show-xs-block">
                                   <select id="goodsStatus" name="goodsStatus" class="valid" lay-filter="goodsStatus" lay-verify="required">
                                       <option value="0">下架</option>
@@ -64,7 +64,7 @@
                       </div>
     </body>
     <script type="text/html" id="barDemo">
-        <a title="编辑"  onclick="editOpen(this)" href="javascript:;" lay-event="edit">
+        <a title="编辑" href="javascript:;" lay-event="edit">
             <i class="layui-icon">&#xe642;</i>
           </a>
           
