商品优化代码提交

--- a/goods/goods.html
+++ b/goods/goods.html
@@ -23,9 +23,9 @@
         <div class="x-nav">
             <span class="layui-breadcrumb">
                 <a href="">首页</a>
-                <a href="">演示</a>
+                <a href="">商品管理</a>
                 <a>
-                    <cite>导航元素</cite></a>
+                    <cite>商品列表</cite></a>
             </span>
             <a class="layui-btn layui-btn-small" style="line-height:1.6em;margin-top:3px;float:right" onclick="location.reload()" title="刷新">
                 <i class="layui-icon layui-icon-refresh" style="line-height:30px"></i>
@@ -53,7 +53,7 @@
                             <hr>
                         </div>
                         <div class="layui-card-header">
-                            <button class="layui-btn" onclick="xadmin.open('添加商品','./goodsAdd.html',700,570)">
+                            <button class="layui-btn" onclick="xadmin.open('添加商品','./goodsAdd.html',900,600)">
                                 <i class="layui-icon"></i>新增</button>
                             <button class="layui-btn layui-btn-danger" onclick="delAll()">
                               <i class="layui-icon"></i>批量删除</button>
