--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@
                             <i class="iconfont nav_right">&#xe697;</i></a>
                         <ul class="sub-menu">
                             <li>
-                                <a onclick="xadmin.add_tab('分类列表','./goods/goodsCategory.html')">
+                                <a onclick="xadmin.add_tab('商品类型','./goods/goodsCategory.html')">
                                     <i class="iconfont">&#xe6a7;</i>
-                                    <cite>分类列表</cite></a>
+                                    <cite>商品类型</cite></a>
                             </li>
                             <li>
                                 <a onclick="xadmin.add_tab('商品列表','./goods/goods.html')">
